test/runtime/fail/import/missing_close.hy

// expect error: Expected `\)` to close `\(` in multi-import

import (
	"io"
